--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 
-REACT_APP_SERVICE=default_service
-REACT_APP_TEMPLATE=template_uoei6rVQ
-REACT_APP_NAME=Zoljargal
+REACT_APP_SERVICE='gmail'
+REACT_APP_TEMPLATE='template_uoei6rVQ'
+REACT_APP_NAME='Zoljargal'
+REACT_APP_USER_ID='user_2bbQAGqINIDHHIAwlGURA'
